# Pomodoro-terminal

./: .gitignore  README.md  notify.py  pomodoro  pyproject.toml  requirements.txt
pomodoro_cmaspi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
