[project]
name = "pomodoro_cmaspi"
version = "0.0.1"
authors = [
  { name="Chirag Mehta", email="chiragmehta@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'plyer==2.1.0',
    'pyfiglet==1.0.2',
]

[project.urls]
"Homepage" = "https://github.com/cmaspi/Pomodoro-terminal/"
"Bug Tracker" = "https://github.com/cmaspi/Pomodoro-terminal/issues"


